--- a/TMC.Business.Host/TMC.Business.Host.csproj
+++ b/TMC.Business.Host/TMC.Business.Host.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="TMCSvr.svc" />
