--- a/TMC.Shared/TMC.Shared.csproj
+++ b/TMC.Shared/TMC.Shared.csproj
@@ -108,14 +108,79 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataTransferObjects\ProductDTO.cs" />
-    <Compile Include="DataTransferObjects\BlogDTO.cs" />
-    <Compile Include="DataTransferObjects\DTOBase.cs" />
     <Compile Include="Enums\MappingType.cs" />
+    <Compile Include="Functional\DataTransferObjects\IProductDTO.cs" />
+    <Compile Include="Functional\DataTransferObjects\IBlogDTO.cs" />
+    <Compile Include="Infrastructure\Common\CommonAttributes\DisplayTextKeyAttribute.cs" />
+    <Compile Include="Infrastructure\Common\CommonAttributes\EntityPropertyMappingAttribute.cs" />
+    <Compile Include="Infrastructure\Common\CommonAttributes\QualifiedTypeNameAttribute.cs" />
+    <Compile Include="Infrastructure\Common\CommonAttributes\ViewModelPropertyMappingAttribute.cs" />
+    <Compile Include="Infrastructure\Common\Constants\AppConstants.cs" />
+    <Compile Include="Infrastructure\Common\Constants\CompanyAuthorization.cs" />
+    <Compile Include="Infrastructure\Common\Constants\EntityConstants.cs" />
+    <Compile Include="Infrastructure\Common\Constants\GlobalConstants.cs" />
+    <Compile Include="Infrastructure\Common\Constants\QueryStringConstants.cs" />
+    <Compile Include="Infrastructure\Common\Constants\ResourceConstants - Copy.cs" />
+    <Compile Include="Infrastructure\Common\Constants\ResourceConstants.cs" />
+    <Compile Include="Infrastructure\Common\Constants\RuleSetConstants.cs" />
+    <Compile Include="Infrastructure\Common\Constants\SuppressMessageConstants.cs" />
+    <Compile Include="Infrastructure\Common\Constants\UserAuthorization.cs" />
+    <Compile Include="Infrastructure\Common\Constants\ValidationConstants.cs" />
+    <Compile Include="Infrastructure\Common\Enums\DACType.cs" />
+    <Compile Include="Infrastructure\Common\ExceptionHandling\Base\ExceptionBase.cs" />
+    <Compile Include="Infrastructure\Common\ExceptionHandling\CustomExceptions\AttributeNotDefinedException.cs" />
+    <Compile Include="Infrastructure\Common\ExceptionHandling\CustomExceptions\BDCException.cs" />
+    <Compile Include="Infrastructure\Common\ExceptionHandling\CustomExceptions\DACException.cs" />
+    <Compile Include="Infrastructure\Common\ExceptionHandling\CustomExceptions\FactoryException.cs" />
+    <Compile Include="Infrastructure\Common\ExceptionHandling\CustomExceptions\NotificationException.cs" />
+    <Compile Include="Infrastructure\Common\ExceptionHandling\ExceptionManager.cs" />
+    <Compile Include="Infrastructure\Common\Extensions\DateTimeExtensions.cs" />
+    <Compile Include="Infrastructure\Common\Extensions\GenericIEnumerableExtensions.cs" />
+    <Compile Include="Infrastructure\Common\Extensions\StringExtensions.cs" />
+    <Compile Include="Infrastructure\Common\Extensions\ValueTypeExtensions.cs" />
+    <Compile Include="Infrastructure\Common\Factory\FactoryBase.cs" />
+    <Compile Include="Infrastructure\Common\Logging\ILogger.cs" />
+    <Compile Include="Infrastructure\Common\Logging\Logger.cs" />
+    <Compile Include="Infrastructure\Common\Notification\Base\NotificationBase.cs" />
+    <Compile Include="Infrastructure\Common\Notification\Factory\INotificationFactory.cs" />
+    <Compile Include="Infrastructure\Common\Notification\Factory\NotificationFactory.cs" />
+    <Compile Include="Infrastructure\Common\Notification\Interfaces\IEmailNotification.cs" />
+    <Compile Include="Infrastructure\Common\Notification\Interfaces\IInternalNotification.cs" />
+    <Compile Include="Infrastructure\Common\Notification\Interfaces\INotification.cs" />
+    <Compile Include="Infrastructure\Common\Notification\NotificationManager.cs" />
+    <Compile Include="Infrastructure\Common\Notification\NotificationStatusType.cs" />
+    <Compile Include="Infrastructure\Common\Notification\Notifications\EmailNotification.cs" />
+    <Compile Include="Infrastructure\Common\Notification\Notifications\NotificationType.cs" />
+    <Compile Include="Infrastructure\Common\Scheduling\IScheduler.cs" />
+    <Compile Include="Infrastructure\Common\Security\JCCIdentity.cs" />
+    <Compile Include="Infrastructure\Common\Utilities\AppConstantsUtility.cs" />
+    <Compile Include="Infrastructure\Common\Utilities\EmailUtility.cs" />
+    <Compile Include="Infrastructure\Common\Utilities\EnumAttributeUtility.cs" />
+    <Compile Include="Infrastructure\Common\Utilities\PredicateBuilder.cs" />
+    <Compile Include="Infrastructure\Common\Utilities\RandomNumberGenerationUtility.cs" />
+    <Compile Include="Infrastructure\Common\Utilities\ResourceUtility.cs" />
+    <Compile Include="Infrastructure\Common\Utilities\SecurityUtility.cs" />
+    <Compile Include="Infrastructure\Common\Utilities\ValidatorUtility.cs" />
+    <Compile Include="Infrastructure\Common\Validation\JCCValidationFailure.cs" />
+    <Compile Include="Infrastructure\Common\Validation\JCCValidationResult.cs" />
+    <Compile Include="Infrastructure\Data\DACBase.cs" />
+    <Compile Include="Infrastructure\Data\DACFactory.cs" />
+    <Compile Include="Infrastructure\Data\IDACFactory.cs" />
+    <Compile Include="Infrastructure\Data\IDataAccessComponent.cs" />
+    <Compile Include="Infrastructure\DTOModel\CustomAttributes\ViewModelMappingAttribute.cs" />
+    <Compile Include="Infrastructure\DTOModel\DTOBase.cs" />
+    <Compile Include="Infrastructure\DTOModel\DTOFactory.cs" />
+    <Compile Include="Infrastructure\DTOModel\IDTO.cs" />
+    <Compile Include="Infrastructure\DTOModel\IDTOFactory.cs" />
+    <Compile Include="Infrastructure\EntityModel\CustomAttributes\EntityMappingAttribute.cs" />
+    <Compile Include="Infrastructure\EntityModel\Enums\MappingDirectionType.cs" />
+    <Compile Include="Infrastructure\EntityModel\Enums\MappingType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Web.Shared\CouponMasterModel.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Functional\DataAccessComponents\" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
