--- a/TMC.Data/TMC.Data.csproj
+++ b/TMC.Data/TMC.Data.csproj
@@ -126,6 +126,10 @@
       <Project>{4e487c85-d46e-46ea-adf7-a4e5c0e30446}</Project>
       <Name>TMC.EntityDataModel</Name>
     </ProjectReference>
+    <ProjectReference Include="..\TMC.DTOModel\TMC.DTOModel.csproj">
+      <Project>{c8fab759-65b1-45b1-93db-5b8baaf3d5b0}</Project>
+      <Name>TMC.DTOModel</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TMC.Shared\TMC.Shared.csproj">
       <Project>{e0ed8b3f-7a20-4f1d-a8c4-4d47ebab8887}</Project>
       <Name>TMC.Shared</Name>
