--- a/TMC/TMC.Web.csproj
+++ b/TMC/TMC.Web.csproj
@@ -1842,9 +1842,13 @@
     <Content Include="Views\Account\_SetPasswordPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MvcApplication1\TMC.Data.csproj">
+    <ProjectReference Include="..\TMC.Data\TMC.Data.csproj">
       <Project>{9e11fb7c-f450-4a3e-b462-4480921aa872}</Project>
       <Name>TMC.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TMC.DTOModel\TMC.DTOModel.csproj">
+      <Project>{c8fab759-65b1-45b1-93db-5b8baaf3d5b0}</Project>
+      <Name>TMC.DTOModel</Name>
     </ProjectReference>
     <ProjectReference Include="..\TMC.Shared\TMC.Shared.csproj">
       <Project>{e0ed8b3f-7a20-4f1d-a8c4-4d47ebab8887}</Project>
