--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,6 +2,7 @@
 <repositories>
   <repository path="..\EntityDataModel\packages.config" />
   <repository path="..\MvcApplication1\packages.config" />
+  <repository path="..\TMC.Data\packages.config" />
   <repository path="..\TMC.Shared\packages.config" />
   <repository path="..\TMC\packages.config" />
 </repositories>
