--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -3,6 +3,7 @@
   <repository path="..\EntityDataModel\packages.config" />
   <repository path="..\MvcApplication1\packages.config" />
   <repository path="..\TMC.Data\packages.config" />
+  <repository path="..\TMC.EntityDataModel\packages.config" />
   <repository path="..\TMC.Shared\packages.config" />
   <repository path="..\TMC\packages.config" />
 </repositories>
