--- a/TMC.Shared/TMC.Shared.csproj
+++ b/TMC.Shared/TMC.Shared.csproj
@@ -40,7 +40,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="log4net">
-      <HintPath>..\TMC\TMCSupportedDlls\log4net.dll</HintPath>
+      <HintPath>..\TMC.Web\TMCSupportedDlls\log4net.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
